--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   iconify_flutter: ^0.0.5
   flutter_svg: ^1.1.6
+  dotted_border: ^2.1.0
   flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
