--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  intl: ^0.19.0
   cupertino_icons: ^1.0.6
   iconify_flutter: ^0.0.5
   flutter_svg: ^1.1.6
