--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,18 @@
     <!-- 读外部存储文件权限 -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
+    <!-- 网络权限 -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    
+    <!-- 读写存储权限（用于选择/保存图片） -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
+    <!-- Android 13 的图片和视频权限 -->
+    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES"/>
+    <uses-permission android:name="android.permission.READ_MEDIA_VIDEO"/>
     <application
+     android:usesCleartextTraffic="true" 
         android:label="food"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
