--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   intl: ^0.19.0
   cupertino_icons: ^1.0.6
+  # 当前版本信息
+  package_info_plus: ^8.1.1
+  # 打开页面
+  url_launcher: ^6.3.1
+  # 下载文件
+  flutter_downloader: ^1.11.8
   # 使用iconify图标
   iconify_flutter: ^0.0.5
   # 加载SVG图片
