--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ dependencies:
   shared_preferences: ^2.2.3
   # 状态管理
   provider: ^6.0.5
+  # 压缩图片
+  flutter_image_compress: ^2.4.0
   
 
 dev_dependencies:
